--- a/demos/style.css
+++ b/demos/style.css
@@ -8,13 +8,13 @@ body {
   user-select: none;
 }
 
-#panel {
+#p {
   width: 200px;
   position: fixed;
   background: rgba(0, 0, 0, 0.5);
 }
 
-#panel summary {
+#p summary {
   padding: 8px;
 }
 
@@ -31,11 +31,11 @@ body {
   font-size: 14px;
 }
 
-#panel img {
+#p img {
   max-width: 100%;
 }
 
-#demo {
+#d {
   width: 100%;
   height: 100vh;
 }
