--- a/demos/style.css
+++ b/demos/style.css
@@ -47,16 +47,27 @@ body {
   touch-action: none;
 }
 
+#lil {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 0;
+  z-index: 0;
+}
+
 #gui {
   position: fixed;
-  bottom: 0px;
-  right: 50px;
+  bottom: 10px;
+  right: 70px;
 }
+
 #buttons {
   position: fixed;
   bottom: 10px;
   right: 10px;
 }
+
 button {
   appearance: none;
   min-width: 48px;
@@ -71,18 +82,22 @@ button {
   display: block;
   cursor: pointer;
 }
+
 button:hover {
   background-color: rgba(80, 80, 80, 0.8);
 }
+
 #buttons a {
   text-decoration: none;
   color: white;
 }
+
 #aboutButton {
   position: fixed;
   top: 10px;
   right: 10px;
 }
+
 a {
   color: aquamarine;
 }
